--- a/myPortFolio/app/templates/app/portfolio.html
+++ b/myPortFolio/app/templates/app/portfolio.html
@@ -1,40 +1,50 @@
 {% load static %}
-<!--<section id="portfolio" class="portfolio section-bg">-->
-<!--    <div class="container">-->
+<section id="portfolio" class="portfolio section-bg">
+    <div class="container">
 
-<!--        <div class="section-title">-->
-<!--            <h2>Portfolio</h2>-->
-<!--            <p>Explore a selection of my projects showcasing my skills and expertise.</p>-->
-<!--        </div>-->
+        <div class="section-title">
+            <h2>Portfolio</h2>
+            <p>Explore a selection of my projects showcasing my skills and expertise.</p>
+        </div>
 
-<!--        <div class="row" data-aos="fade-up">-->
-<!--            <div class="col-lg-12 d-flex justify-content-center">-->
-<!--                <ul id="portfolio-flters">-->
-<!--                    <li data-filter="*" class="filter-active">All</li>-->
-<!--                    <li data-filter=".filter-app">App</li>-->
-<!--&lt;!&ndash;                    <li data-filter=".filter-card">Card</li>&ndash;&gt;-->
-<!--                    <li data-filter=".filter-web">Web</li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="row" data-aos="fade-up">
+            <div class="col-lg-12 d-flex justify-content-center">
+                <ul id="portfolio-flters">
+                    <li data-filter="*" class="filter-active">All</li>
+                    <li data-filter=".filter-app">App</li>
+<!--                    <li data-filter=".filter-card">Card</li>-->
+                    <li data-filter=".filter-web">Web</li>
+                </ul>
+            </div>
+        </div>
 
-<!--        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">-->
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-<!--            &lt;!&ndash; Replace the following portfolio items with your actual projects &ndash;&gt;-->
-<!--            &lt;!&ndash; Sample portfolio item &ndash;&gt;-->
-<!--            <div class="col-lg-4 col-md-6 portfolio-item filter-app">-->
-<!--                <div class="portfolio-wrap">-->
-<!--                    <img src="{% static 'img/portfolio/portfolio-1.jpg' %}" class="img-fluid" alt="">-->
-<!--                    <div class="portfolio-links">-->
-<!--                        <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
-<!--                        <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+            <!-- Replace the following portfolio items with your actual projects -->
+            <!-- Sample portfolio item -->
+            <div class="col-lg-3 col-md-7 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                    <img src="https://github.com/ralphy89/FitnessApp/blob/main/Screens/auth_screen.gif?raw=true" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                        <a href="https://github.com/ralphy89/FitnessApp/blob/main/Screens/auth_screen.gif?raw=true" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                        <a href="https://github.com/ralphy89/FitnessApp" title="More Details"><i class="bx bxl-github"></i></a>
+                    </div>
+                </div>
+            </div>
 
-<!--            &lt;!&ndash; Add more portfolio items here &ndash;&gt;-->
+            <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                    <img src="https://github.com/ralphy89/Flash_Card/blob/main/flash_card3.gif?raw=true" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                        <a href="https://github.com/ralphy89/Flash_Card/blob/main/flash_card3.gif?raw=true" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                        <a href="https://github.com/ralphy89/Flash_Card" title="More Details"><i class="bx bxl-github"></i></a>
+                    </div>
+                </div>
+            </div>
 
-<!--        </div>-->
+            <!-- Add more portfolio items here -->
 
-<!--    </div>-->
-<!-- </section>&lt;!&ndash; End Portfolio Section &ndash;&gt;-->
+        </div>
+
+    </div>
+ </section><!-- End Portfolio Section -->
