--- a/myPortFolio/templates/navbar.html
+++ b/myPortFolio/templates/navbar.html
@@ -38,7 +38,7 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="https://media.licdn.com/dms/image/C4E03AQEkwIZB67UjJw/profile-displayphoto-shrink_800_800/0/1648899164705?e=1716422400&v=beta&t=ASW-dN7HaokBRnImMA0Rb4ZZf54fDGDg3RbwEikZoVY" alt="" class="img-fluid rounded-circle">
+                <img src="{% static 'img/profil.jpeg' %}" alt="" class="img-fluid rounded-circle">
 
                 <h1 class="text-light"><a class="nav-link scrollto" href="#about">{{name}} {{lastname}}</a></h1>
                 <div class="social-links mt-3 text-center">
@@ -57,7 +57,7 @@
                     <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-medal"></i> <span>Skills</span></a></li>
                     <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
 
-                    <!--                    <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
+                    <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
 <!--                    <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
                     <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
