--- a/myPortFolio/app/templates/app/main.html
+++ b/myPortFolio/app/templates/app/main.html
@@ -17,6 +17,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>DUMERA Ralph</title>
+    <meta name="google-site-verification" content="tXhbK8F4frcyVGyq5L6x_Yhss9d6H3QiSavVCOUKVOY" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
